Feat(hotcode):rotas de escala, modificacoes de rota user
