# desenvolvimento/backend/src/controllers/adminController.js
@@ -6,9 +6,10 @@ const somenteCpf = require("../functions/somenteCpf");
 const tratarMatricula = require("../functions/tratarMatricula");
 const somenteMatricula = require("../functions/somenteMatricula");
 const tratarTelefone = require("../functions/tratarTelefone");
-const validateEmail = require("../functions/validarEmail");
+const validarEmail = require("../functions/validarEmail");
 const validateFields = require("../functions/validarCampos");
 const somenteTelefone = require("../functions/somenteTelefone");
+const limparEspacos = require("../functions/limparEspacos");
 
 async function readUsers(req, res) {
   await database
@@ -52,7 +53,8 @@ async function readUsers(req, res) {
             sigla_patente: element.sigla_patente || "N/A",
             patente_ativa: element.patente_ativa ? "Ativa" : "Inativa",
             patente_criado_em: element.patente_criado_em || "01/01/1900",
-            patente_atualizado_em: element.patente_atualizado_em || "01/01/1900",
+            patente_atualizado_em:
+              element.patente_atualizado_em || "01/01/1900",
           });
         }
         return res.status(200).json(arrayDados);
@@ -123,6 +125,7 @@ async function createUser(req, res) {
 }
 
 async function deleteUser(req, res) {
+  console.log("ID do usuário a ser deletado:", req.params.id);
   const { id } = req.params;
   try {
     const userExists = await database("users").where({ id_user: id }).first();
@@ -139,17 +142,51 @@ async function deleteUser(req, res) {
 }
 
 async function updateUser(req, res) {
-  const { id, nome, nome_guerra, cpf, email, password, matricula, id_patente } = req.body;
+
+  if (!req.body?.nome || req.body?.nome === "") {
+    return res.status(400).json({ msg: "Nome é obrigatório!" });
+  }
+  if (!req.body?.nome_guerra || req.body?.nome_guerra === "") {
+    return res.status(400).json({ msg: "Nome de guerra é obrigatório!" });
+  }
+  if (!req.body?.cpf || req.body?.cpf === "" || somenteCpf(req.body?.cpf) === 0) {
+    return res.status(400).json({ msg: "CPF é obrigatório!" });
+  }
+  if (!req.body?.password || req.body?.password === "") {
+    return res.status(400).json({ msg: "Senha é obrigatória!" });
+  }
+  if (!req.body?.matricula || req.body?.matricula === "") {
+    return res.status(400).json({ msg: "Matrícula é obrigatória!" });
+  }
+    if (!req.body?.telefone || req.body?.telefone === "" || somenteTelefone(req.body?.telefone) === 0) {
+    return res.status(400).json({ msg: "Telefone é obrigatório!" });
+  }
+  if (req.body?.password.length < 6) {
+    return res
+      .status(400)
+      .json({ msg: "Senha deve ter pelo menos 6 caracteres!" });
+  }
+  if (req.body?.email && !validarEmail(req.body?.email)) {
+    return res
+      .status(400)
+      .json({ msg: "Email inválido!" });
+  }
+
+  const { id, nome, nome_guerra, cpf, email, password, matricula, telefone, id_patente } = req.body;
 
   // 1. Validações Iniciais
   if (!id || isNaN(id))
     return res.status(400).json({ msg: "ID inválido ou ausente" });
-  if (!nome || !cpf || !email || !password || !matricula || !id_patente) {
+  if (!nome || !cpf || !email || !password || !matricula || !id_patente || !nome_guerra || !telefone) {
     return res.status(400).json({ msg: "Dados incompletos!" });
   }
-
+  //Higienização dos dados
+  const emailOnly = email.trim().toLowerCase();
+  const nomeOnly = limparEspacos(nome);
+  const nomeGuerraOnly = limparEspacos(nome_guerra);
   const cpfOnly = somenteCpf(cpf);
   const matriculaOnly = somenteMatricula(matricula);
+  const telefoneOnly = somenteTelefone(telefone);
 
   try {
     // 2. Verificar se o usuário que será editado existe
@@ -168,7 +205,7 @@ async function updateUser(req, res) {
 
     const conflictEmail = await database("users")
       .where((builder) => {
-        builder.where({ email });
+        builder.where({ email: emailOnly });
       })
       .andWhereNot({ id_user: id }) // Ignora o próprio usuário que está sendo editado
       .first();
@@ -194,14 +231,14 @@ async function updateUser(req, res) {
     await database("users")
       .where({ id_user: id })
       .update({
-        email,
+        email: emailOnly,
         password: hash,
-        nome,
+        nome: nomeOnly || "Nome não informado",
         id_patente: req.body.id_patente || null,
         cpf: cpfOnly,
         matricula: matriculaOnly,
-        telefone: somenteTelefone(req.body.telefone) || 0,
-        nome_guerra: req.body.nome_guerra || "Nome de Guerra não Cadastrado",
+        telefone: telefoneOnly || 0,
+        nome_guerra: nomeGuerraOnly || "Nome de Guerra não Cadastrado",
         updated_at: new Date(),
       });
 
@@ -269,6 +306,13 @@ async function readAllPatente(req, res) {
 }
 /*************ADMIN CRUD****************/
 function loginAdmin(req, res) {
+  if (!req.body?.cpf || req.body?.cpf === "") {
+    return res.status(400).json({ msg: "CPF é obrigatório!" });
+  }
+  if (!req.body?.password || req.body?.password === "") {
+    return res.status(400).json({ msg: "Senha é obrigatória!" });
+  }
+
   let cpfOnly = somenteCpf(req.body.cpf);
   if (cpfOnly === 0) {
     return res.status(401).send({ msg: "Credencial inválida!" });
@@ -279,7 +323,7 @@ function loginAdmin(req, res) {
     .where({ cpf: cpfOnly })
     .then((data) => {
       if (data.length <= 0) {
-        return res.status(401).send({ msg: "Credencial inválida!" });
+        return res.status(401).send({ msg: "Usuário não encontrado!" });
       } else {
         bcryptjs.compare(
           req.body.password,
@@ -319,13 +363,32 @@ function loginAdmin(req, res) {
 }
 
 async function createAdmin(req, res) {
+  if (!req.body?.nome || req.body?.nome === "") {
+    return res.status(400).json({ msg: "Nome é obrigatório!" });
+  }
+  if (!req.body?.cpf || req.body?.cpf === "") {
+    return res.status(400).json({ msg: "CPF é obrigatório!" });
+  }
+  if (!req.body?.password || req.body?.password === "") {
+    return res.status(400).json({ msg: "Senha é obrigatória!" });
+  }
+  if (req.body?.password.length < 6) {
+    return res
+      .status(400)
+      .json({ msg: "Senha deve ter pelo menos 6 caracteres!" });
+  }
+
+  if (somenteCpf(req.body?.cpf) === 0) {
+    return res.status(400).json({ msg: "CPF inválido!" });
+  }
+
   await database
     .select()
     .table("admins")
     .where({ cpf: somenteCpf(req.body.cpf) })
     .then((data) => {
       if (data.length >= 1) {
-        return res.status(409).json({ msg: "Email ou CPF já cadastrado!" });
+        return res.status(409).json({ msg: "CPF já cadastrado!" });
       } else {
         bcryptjs.genSalt(10, function (err, salt) {
           bcryptjs.hash(req.body.password, salt, async function (err, hash) {
@@ -392,6 +455,7 @@ async function getAdmin(req, res) {
               cpf: tratarCpf(data[0].cpf),
               role: data[0].role,
             };
+            console.log("Dados do Admin:", data);
             return res.status(200).send(userData);
           }
         })
@@ -446,6 +510,62 @@ async function deleteAdmin(req, res) {
   }
 }
 
+async function updateAdmin(req, res) {
+  // 1. Validações Iniciais
+  if (!req.body?.id || req.body?.id === "" || isNaN(req.body?.id)) {
+    return res.status(400).json({ msg: "ID é obrigatório!" });
+  }
+  if (!req.body?.nome || req.body?.nome === "") {
+    return res.status(400).json({ msg: "Nome é obrigatório!" });
+  }
+  if (!req.body?.cpf || req.body?.cpf === "") {
+    return res.status(400).json({ msg: "CPF é obrigatório!" });
+  }
+  if (somenteCpf(req.body?.cpf) === 0) {
+    return res.status(400).json({ msg: "CPF inválido!" });
+  }
+  //Destructuring dos dados do corpo da requisição
+  const { id, nome, cpf } = req.body;
+  //Higienização do CPF para apenas números
+  const cpfOnly = somenteCpf(cpf);
+
+  try {
+    // 2. Verificar se o usuário que será editado existe
+    const userToUpdate = await database("admins")
+      .where({ id_admin: id })
+      .first();
+    if (!userToUpdate) {
+      return res.status(404).json({ msg: "Administrador não encontrado" });
+    }
+
+    // 3. Verificar se os novos dados (CPF) já pertencem a OUTRO administrador
+    const conflictCPF = await database("admins")
+      .where((builder) => {
+        builder.where({ cpf: cpfOnly });
+      })
+      .andWhereNot({ id_admin: id }) // Ignora o próprio usuário que está sendo editado
+      .first();
+
+    if (conflictCPF) {
+      return res.status(409).json({ msg: "CPF já cadastrado em outra conta!" });
+    }
+
+    // 4. Executar o Update
+    await database("admins")
+      .where({ id_admin: id })
+      .update({
+        nome: nome || "Nome não informado",
+        cpf: cpfOnly,
+        updated_at: new Date(),
+      });
+
+    return res
+      .status(200)
+      .json({ msg: "Administrador atualizado com sucesso!" });
+  } catch (error) {
+    return res.status(500).json({ msg: "Erro interno do servidor" });
+  }
+}
 module.exports = {
   readUsers: readUsers,
   createUser: createUser,
@@ -453,11 +573,12 @@ module.exports = {
   updateUser: updateUser,
 
   readAllPm: readAllPm,
-  readAllPatente:readAllPatente,
+  readAllPatente: readAllPatente,
 
   loginAdmin: loginAdmin,
   createAdmin: createAdmin,
   getAdmin: getAdmin,
   allAdmins: allAdmins,
   deleteAdmin: deleteAdmin,
+  updateAdmin: updateAdmin,
 };
