# desenvolvimento/backend/src/routes/escalaRoutes.js
@@ -16,13 +16,16 @@ const router = express.Router();
 // router.get("/guarnicoes", verifyJwt, escalaController.listarGuarnicoes);
 // router.post("/guarnicoes", verifyJwt, escalaController.criarGuarnicao);
 
+//*****************CRUD ESCALA********************* */
 // router.post("/gerar", verifyJwt, escalaController.gerarEscala);
 router.get("/listar", verifyJwt, modelos_escalas.listarEscalas);
 router.get("/listar/:id", verifyJwt, modelos_escalas.getEscalaById);
-
+router.delete("/excluir/:id", verifyJwt, modelos_escalas.deleteEscala);
+router.post("/criar", verifyJwt, modelos_escalas.createEscala);
+router.post("/escala-guarnicoes", verifyJwt, modelos_escalas.listarEscalaGuarnicoes);
 
 //
 router.post("/guarnicao", verifyJwt, modelos_escalas.create_guarnicao);
-router.post("/criar-escala", verifyJwt, modelos_escalas.createModeloEscala);
+
 
 module.exports = router;
